@@ -1,4 +1,4 @@
-package com.example.demo.librairie.service;
+package com.example.demo.librairie.controller;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -6,10 +6,11 @@ import static org.mockito.Mockito.*;
 
 import com.example.demo.librairie.dto.GenreRequest;
 import com.example.demo.librairie.dto.GenreResponse;
-import com.example.demo.librairie.dto.GenreRevenueResponse;
 import com.example.demo.librairie.entity.Genre;
 import com.example.demo.librairie.repository.GenreRepository;
+import com.example.demo.librairie.service.GenreService;
 import jakarta.persistence.EntityNotFoundException;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -34,37 +35,42 @@ class GenreServiceTest {
   @BeforeEach
   void setUp() {
     genreId = UUID.randomUUID();
+    genre =
+        Genre.builder()
+            .id(genreId)
+            .name("Science-Fiction")
+            .description("Livres de science-fiction")
+            .build();
 
-    genre = Genre.builder().id(genreId).name("Fiction").description("Fiction books").build();
-
-    genreRequest = GenreRequest.builder().name("Fiction").description("Fiction books").build();
+    genreRequest = GenreRequest.builder().name("Fantasy").description("Livres de fantasy").build();
   }
 
   @Test
-  void getAll() {
-    when(genreRepository.findAll()).thenReturn(List.of(genre));
+  void getAll_ShouldReturnAllGenres() {
+    List<Genre> genres = Arrays.asList(genre, new Genre());
+    when(genreRepository.findAll()).thenReturn(genres);
 
     List<GenreResponse> result = genreService.getAll();
 
     assertNotNull(result);
-    assertEquals(1, result.size());
-    assertEquals(genre.getName(), result.get(0).getName());
+    assertEquals(2, result.size());
     verify(genreRepository, times(1)).findAll();
   }
 
   @Test
-  void getById() {
+  void getById_WhenGenreExists_ShouldReturnGenre() {
     when(genreRepository.findById(genreId)).thenReturn(Optional.of(genre));
 
     GenreResponse result = genreService.getById(genreId);
 
     assertNotNull(result);
+    assertEquals(genreId, result.getId());
     assertEquals(genre.getName(), result.getName());
     verify(genreRepository, times(1)).findById(genreId);
   }
 
   @Test
-  void getById_ShouldThrowException_WhenNotFound() {
+  void getById_WhenGenreDoesNotExist_ShouldThrowException() {
     when(genreRepository.findById(genreId)).thenReturn(Optional.empty());
 
     assertThrows(EntityNotFoundException.class, () -> genreService.getById(genreId));
@@ -72,60 +78,42 @@ class GenreServiceTest {
   }
 
   @Test
-  void getGenreEntityById() {
-    when(genreRepository.findById(genreId)).thenReturn(Optional.of(genre));
+  void create_ShouldSaveAndReturnGenre() {
+    // Créer un genre qui correspond à la requête
+    Genre savedGenre =
+        Genre.builder()
+            .id(genreId)
+            .name(genreRequest.getName())
+            .description(genreRequest.getDescription())
+            .build();
 
-    Genre result = genreService.getGenreEntityById(genreId);
-
-    assertNotNull(result);
-    assertEquals(genre.getName(), result.getName());
-    verify(genreRepository, times(1)).findById(genreId);
-  }
-
-  @Test
-  void getGenresByIds() {
-    List<UUID> ids = List.of(genreId);
-    when(genreRepository.findAllById(ids)).thenReturn(List.of(genre));
-
-    List<Genre> result = genreService.getGenresByIds(ids);
-
-    assertNotNull(result);
-    assertEquals(1, result.size());
-    verify(genreRepository, times(1)).findAllById(ids);
-  }
-
-  @Test
-  void create() {
-    when(genreRepository.save(any(Genre.class))).thenReturn(genre);
+    when(genreRepository.save(any(Genre.class))).thenReturn(savedGenre);
 
     GenreResponse result = genreService.create(genreRequest);
 
     assertNotNull(result);
+    assertEquals(genreId, result.getId());
     assertEquals(genreRequest.getName(), result.getName());
+    assertEquals(genreRequest.getDescription(), result.getDescription());
     verify(genreRepository, times(1)).save(any(Genre.class));
   }
 
   @Test
-  void update() {
-    GenreRequest updateRequest =
-        GenreRequest.builder().name("Non-Fiction").description("Non-Fiction books").build();
-
-    Genre updatedGenre =
-        Genre.builder().id(genreId).name("Non-Fiction").description("Non-Fiction books").build();
-
+  void update_WhenGenreExists_ShouldUpdateAndReturn() {
     when(genreRepository.findById(genreId)).thenReturn(Optional.of(genre));
-    when(genreRepository.save(any(Genre.class))).thenReturn(updatedGenre);
+    when(genreRepository.save(any(Genre.class))).thenReturn(genre);
 
-    GenreResponse result = genreService.update(genreId, updateRequest);
+    GenreResponse result = genreService.update(genreId, genreRequest);
 
     assertNotNull(result);
-    assertEquals(updateRequest.getName(), result.getName());
+    assertEquals(genreRequest.getName(), result.getName());
+    assertEquals(genreRequest.getDescription(), result.getDescription());
     verify(genreRepository, times(1)).findById(genreId);
     verify(genreRepository, times(1)).save(any(Genre.class));
   }
 
   @Test
-  void update_ShouldThrowException_WhenNotFound() {
+  void update_WhenGenreDoesNotExist_ShouldThrowException() {
     when(genreRepository.findById(genreId)).thenReturn(Optional.empty());
 
     assertThrows(EntityNotFoundException.class, () -> genreService.update(genreId, genreRequest));
@@ -134,44 +122,22 @@ class GenreServiceTest {
   }
 
   @Test
-  void delete() {
+  void delete_WhenGenreExists_ShouldDelete() {
     when(genreRepository.existsById(genreId)).thenReturn(true);
+    doNothing().when(genreRepository).deleteById(genreId);
 
-    assertDoesNotThrow(() -> genreService.delete(genreId));
+    genreService.delete(genreId);
+
     verify(genreRepository, times(1)).existsById(genreId);
     verify(genreRepository, times(1)).deleteById(genreId);
   }
 
   @Test
-  void delete_ShouldThrowException_WhenNotFound() {
+  void delete_WhenGenreDoesNotExist_ShouldThrowException() {
     when(genreRepository.existsById(genreId)).thenReturn(false);
 
     assertThrows(EntityNotFoundException.class, () -> genreService.delete(genreId));
     verify(genreRepository, times(1)).existsById(genreId);
     verify(genreRepository, never()).deleteById(genreId);
-  }
-
-  @Test
-  void getRevenue() {
-    when(genreRepository.findById(genreId)).thenReturn(Optional.of(genre));
-    when(genreRepository.getRevenueByGenreId(genreId)).thenReturn(5000.00);
-
-    GenreRevenueResponse result = genreService.getRevenue(genreId);
-
-    assertNotNull(result);
-    assertEquals(genreId, result.getGenreId());
-    assertEquals(genre.getName(), result.getGenreName());
-    assertEquals(5000.00, result.getTotalRevenue());
-    verify(genreRepository, times(1)).findById(genreId);
-    verify(genreRepository, times(1)).getRevenueByGenreId(genreId);
-  }
-
-  @Test
-  void getRevenue_ShouldThrowException_WhenNotFound() {
-    when(genreRepository.findById(genreId)).thenReturn(Optional.empty());
-
-    assertThrows(EntityNotFoundException.class, () -> genreService.getRevenue(genreId));
-    verify(genreRepository, times(1)).findById(genreId);
-    verify(genreRepository, never()).getRevenueByGenreId(any());
   }
 }
